cleanup and outsourcing of logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "ungödel"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "ungoedel"
+path = "src/main.rs"
+
+[lib]
+name = "ungoedel"
+path = "src/lib/mod.rs"
 
 [dependencies]
